# midigoat

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
banks_existenza/00.Generic/: bank.json
banks_existenza/01.CantStop/: bank.json
banks_existenza/04.TheOneILove/: bank.json
banks_existenza/06.SayItAintSo/: bank.json
banks_existenza/07.Warning/: bank.json
banks_existenza/10.Song2/: bank.json
banks_existenza/11.ManInTheBox/: bank.json
config/: controller.json  controller_test.json  network.json
data/banks/00.Generic1/: bank.json
data/banks/01.Generic2/: bank.json
data/banks/02.STP/: bank.json
data/banks/03.Today/: bank.json
data/banks/04.Kryptonite/: bank.json
data/banks/05.ComeAsYouAre/: bank.json
data/presets/: cl-pha.json  clean-chorus.json  clean-panth.json  clean-pitch.json  clean.json  crunch-panth.json  crunch.json  delay.json  dist-delay.json  dist.json  muff-pha.json  muff-plu-pha.json  muff-plu.json  muff.json  plumes.json  solo-clean.json  solo-crunch.json  solo-dist-univ.json  solo-dist.json  solo-r-chorus.json  solo-r.json  tf-off.json  toggle.json  trem.json  univibe.json
firmware/: Dockerfile  build.sh  inisetup.py  manifest.py  setup.sh
libs/: README.md
libs/microdot/: microdot_asyncio.py
presets/: cl-pha.json  dist.json  muff.json  plumes-trem.json  plumes.json  solo-r.json
src/: the_imp_test.py
src/midicontroller/: action.py  app.py  app_test.py  bank.py  controller.py  controller_test.py  esp_controller.py  preset.py  webserver.py  wifi.py
tools/: Dockerfile
(+9 files in other folders)
