[tool.poetry]
name = "midigoat"
version = "0.1.0"
description = ""
authors = ["Pi3rral"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
esptool = "^4.7.0"
rshell = "^0.0.32"
adafruit-ampy = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
